PyMaker/datas/object2/RawHTML/i17901/Python_DOC_referPages.error-invalid-syntax-init-py-working-with-beautiful-soup.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/30140034/beautifulsoup-invalid-syntax-in-python-3-4-after-2to3-py">BeautifulSoup invalid syntax in Python 3.4 (after 2to3.py)</a>
<span class="question-originals-answer-count">
                    1 answer
                </span>
</li>
</ul>
</div>
<p>I want to write a simple code that create a html file from a site content. I'm using <code>beautifulsoup 4</code> library. When creating a <code>BeautifulSoup</code> object with:</p>
<pre><code>BeautifulSoup('&lt;html&gt;&lt;/html&gt;')
</code></pre>
<p>I get this error:</p>
<blockquote>
<p>Invalid syntax (<strong>init</strong>.py, line 175)</p>
</blockquote>
<p>and this line makes the error:</p>
<blockquote>
<p>from bs4 import BeautifulSoup</p>
</blockquote>
<p>I installed the library by executing <code>setup.py</code>.</p>
<p>What's the problem? </p>
<p>My entire code:</p>
<pre><code>import urllib.request as req
from bs4 import BeautifulSoup

def main():
    get_announcements("92-93", 1, 153, 12)

def get_announcements(year, term, courseID, group):
    website = req.urlopen('http://ce.sharif.edu/courses/' + year + '/' + str(term) + '/ce' + str(courseID) + '-' + str(group) + '/')
    site_content = website.readall()

    soup = BeautifulSoup('&lt;html&gt;&lt;/html&gt;')

if __name__ == '__main__':
    main()
</code></pre>
<p>and error line in the <em>init.py</em> from the library files:</p>
<pre><code>try:
    is_file = os.path.exists(possible_filename)
except Exception, e:   #ERROR!!
    # This is almost certainly a problem involving
    # characters not valid in filenames on this
    # system. Just let it go.
    pass
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>You're not making this too easy, but I think there is just enough information in what you posted to work out your problem.</p>
<pre><code>import urllib.request as req
</code></pre>
<p>This line only works if you are using Python 3.x Since you get past this line I will assume that is the case.</p>
<pre><code>except Exception, e:
</code></pre>
<p>This line is using Python 2.x syntax. You appear to be attempting to import a Python 2.x library in a Python 3.x programme. That won't work. In Python 3 the <code>except</code> clause has this syntax (so you need <code>as</code> instead of a comma):</p>
<pre><code>("except" [expression ["as" target]] ":" suite)+
</code></pre>
<p>Just to verify, if my assumptions are correct, the syntax error should be indicating the comma as the actual character producing the problem.</p>
<p>I don't know why this is happening for you. I just installed bs4 using <code>pip install BeautifulSoup4</code> and the code in the version just installed for me round line 175 is:</p>
<pre><code>        try:
            is_file = os.path.exists(possible_filename)
        except Exception as e:
            # This is almost certainly a problem involving
            # characters not valid in filenames on this
            # system. Just let it go.
            pass
</code></pre>
<p>which would work.</p>
</div>
<div class="post-text" itemprop="text">
<p>I was able to reproduce this problem on a Mac OSX 10.10.1 that has both the original Python 2.7.6 distributed with OSX and the Python IDLE on 3.4.2. After using </p>
<pre><code>python3 setup.py install 
</code></pre>
<p>I got the same error: </p>
<pre><code>&gt;&gt;&gt; import bs4
Traceback (most recent call last):
  File "&lt;stdin&gt;", line 1, in &lt;module&gt;
  File "/Applications/Python 3.4/beautifulsoup4-4.3.2/bs4/__init__.py", line 175
    except Exception, e:
                    ^
SyntaxError: invalid syntax
</code></pre>
<p>The installer might be reading the default installation directory at /Library/Python/2.7/site-packages/ and assuming that BeautifulSoup will run on Python 2.7. Looks like a bug in the setup.</p>
</div>
<div class="post-text" itemprop="text">
<p>The solution can be found <a href="http://www.crummy.com/software/BeautifulSoup/bs4/doc/" rel="nofollow">here</a>.</p>
<p>The issue is that the module that you downloaded is written in python version 2 which has incompatible syntax with the python version that you have installed on your computer (version 3). </p>
<p>To solve this issue use the <code>2to3.py</code> tool located in 
<code>...\Python34\Tools\Scripts</code> to manually convert each of the python files in the bs4 directory <code>(...\beautifulsoup4-4.3.2\bs4)</code> from version 2 to version 3.</p>
<p>For example typing </p>
<p><code>'C:\Python34\Tools\Scripts\2to3.py ...\beautifulsoup4-4.3.2\bs4\__init__.py'</code> </p>
<p>into your command prompt will convert the <code>__init__.py</code> file from version 2 to version 3. </p>
</div>
<span class="comment-copy">Can you also provide line no 174?</span>
<span class="comment-copy">There should also be a circumflex pointing at the point in the line that gave the error: please always copy and paste the complete exact error rather than paraphrasing it. Most likely though you have an unclosed parenthesis on the line before.</span>
<span class="comment-copy">@Duncan the exact error is what I've said above. please see the edited part</span>
<span class="comment-copy">@0xc0de: please see the edited part</span>
<span class="comment-copy">I've reverted my -1 after your edit but still you could make it clearer (and easier for you to get solution) by copy pasting error. You can also add line numbers to the edited part. The newly added part really doesn't seem to raise any error, as it's masking <i>all</i> the errors! Are you sure the error comes from this file/module?</span>
<span class="comment-copy">BeautifulSoup 4 uses <a href="https://docs.python.org/3/distutils/apiref.html#distutils.command.build_py.build_py_2to3" rel="nofollow noreferrer"><code>build_py_2to3</code></a> to create a Python 3 codebase; if this exception shows up then the OP is trying to run the <i>original tarball</i>, not the converted codebase.</span>
<span class="comment-copy">You are not actually using the installed BeautifulSoup package. The code you are running is the source tarball instead. You should not add the downloaded source to your path; <code>python3 setup.py install</code> copies the <i>translated</i> code to your site packages instead.</span>
<span class="comment-copy">The <code>setup.py</code> for BeautifulSoup installer already takes care of this. There is no need to do so manually.</span>
